Major UI Changes
Added Help page. Changed text in About page.

--- a/Rad/Rad.Windows/Rad.Windows.csproj
+++ b/Rad/Rad.Windows/Rad.Windows.csproj
@@ -108,6 +108,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="HelpPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -125,6 +129,10 @@
     <Compile Include="Common\ObservableDictionary.cs" />
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
+    <Compile Include="HelpPage.xaml.cs">
+      <SubType>Code</SubType>
+      <DependentUpon>HelpPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <SubType>Code</SubType>
       <DependentUpon>MainPage.xaml</DependentUpon>
